Change site description.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pratt - Free Bootstrap 3 Theme">
-    <meta name="author" content="Alvarez.is - BlackTie.co">
+    <meta name="description" content="Custom chat application - MyMessenger">
+    <meta name="author" content="Based on BlackTie.co">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>MyMessenger Web</title>
