fix: Изменение изображения и текста.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<br>
 				<br>
 				<div class="col-lg-6 centered">
-					<img class="centered" src="assets/img/app_chat.png" alt="">
+					<img class="centered" src="assets/img/join-room.png" alt="">
 				</div>
 				
 				<div class="col-lg-6">
@@ -166,6 +166,20 @@
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
+		                <br>
+						
+						<div class="accordion-group">
+		                    <div class="accordion-heading">
+		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+									Encryption
+		                        </a>
+		                    </div>
+		                    <div id="collapseFour" class="accordion-body collapse">
+		                        <div class="accordion-inner">
+								<p>All messages between server and client encrypted by AES-256 with 256 bits key. Encryption key a creating in each login, new key in each login. This application did not guarantee that all messages will be secured. But security will be increased...</p>
+								</div><!-- /accordion-inner -->
+		                    </div><!-- /collapse -->
+		                </div><!-- /accordion-group -->
 
 		                <br>			
 					</div><!-- Accordion -->
@@ -192,10 +206,10 @@
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner">
 					    <div class="item active">
-					      <img src="assets/img/app_item_01.png" alt="">
+					      <img src="assets/img/main.png" alt="">
 					    </div>
 					    <div class="item">
-					      <img src="assets/img/app_item_02.png" alt="">
+					      <img src="assets/img/chat.png" alt="">
 					    </div>
 					  </div>
 					</div>
