fix: Показать все скрытые тексты

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		                        No history
 		                        </a>
 		                    </div>
-		                    <div id="collapseTwo" class="accordion-body collapse">
+		                    <div id="collapseTwo" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
 								<p>The app does not save any history. Only in the current session, the chat history is available and only for application users. Only the current moment - only online communication.</p>
 								</div><!-- /accordion-inner -->
@@ -160,7 +160,7 @@
 		                        Online only
 		                        </a>
 		                    </div>
-		                    <div id="collapseThree" class="accordion-body collapse">
+		                    <div id="collapseThree" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
 								<p>The application provides messaging only for users with online status. No delayed messages - only the current moment... Ready to wait - write letters - this application is not for you ;)</p>
 								</div><!-- /accordion-inner -->
@@ -174,7 +174,7 @@
 									Encryption
 		                        </a>
 		                    </div>
-		                    <div id="collapseFour" class="accordion-body collapse">
+		                    <div id="collapseFour" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
 								<p>All messages between server and client encrypted by AES-256 with 256 bits key. Encryption key a creating in each login, new key in each login. This application did not guarantee that all messages will be secured. But security will be increased...</p>
 								</div><!-- /accordion-inner -->
