fix: Картинка не помещалась в область экрана на мобильном устройстве.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<br>
 				<br>
 				<div class="col-lg-6 centered">
-					<img class="centered" src="assets/img/join-room.png" alt="">
+					<img class="centered" src="assets/img/join-room.png" alt="" style="display: block;margin: auto;width: inherit;max-width: 320px;">
 				</div>
 				
 				<div class="col-lg-6">
