--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 				<div class="col-lg-4">
 					<img src="assets/img/intro02.png" alt="">
 					<h3>Online</h3>
-					<p>MyMessenger is a web client that works in the browser - available on any OS like Windows, Unix or Android.</p>
+					<p>MyMessenger it is only online chat. There is not any history.</p>
 				</div>
 				<div class="col-lg-4">
 					<img src="assets/img/intro03.png" alt="">
-					<h3>PC</h3>
-					<p>MyMessenger it is only browser client now - Windows, Unix, Android and any browser.</p>
+					<h3>Browser</h3>
+					<p>MyMessenger is a web client that works in the browser - available on any OS like Windows, Unix or Android.</p>
 				</div>
 			</div>
 			<br>
