add: Добавил ссылки на библиотеки.
Убрал секцию "Что нового". Заменил ее описание возможностей.

--- a/index.html
+++ b/index.html
@@ -114,15 +114,12 @@
 	<div id="features">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">What's New?</h1>
-				<br>
+				<h1 class="centered">Some Features</h1>
 				<br>
 				<div class="col-lg-6 centered">
 					<img class="centered" src="assets/img/join-room.png" alt="" style="display: block;margin: auto;width: inherit;max-width: 320px;">
-				</div>
-				
+				</div>				
 				<div class="col-lg-6">
-					<h3>Some Features</h3>
 					<br>
 				<!-- ACCORDION -->
 		            <div class="accordion ac" id="accordion2">
@@ -233,8 +230,9 @@
 						<li>HTML + CSS</li>
 						<li>CMake</li>
 						<li>C++ 17</li>
-						<li>C++ Lib: Boost::Asio</li>
-						<li>C++ Lib: Crypto++</li>
+						<li>C++ Lib: <a href="https://www.boost.org/doc/libs/1_76_0/libs/beast/doc/html/index.html"> Boost.Beast </a></li>
+						<li>C++ Lib: <a href="https://www.cryptopp.com/"> Crypto++ </a></li>
+						<li>C++ Lib: <a href="https://rapidjson.org/"> RapidJSON </a></li>
 					</ul>
 					<br>
 				</div>
