add: Открывать ссылки в новой вкладке.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+	<link rel="icon" href="assets/img/favicon.png">
+
     <link href="assets/css/main.css" rel="stylesheet">
     
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -230,9 +232,9 @@
 						<li>HTML + CSS</li>
 						<li>CMake</li>
 						<li>C++ 17</li>
-						<li>C++ Lib: <a href="https://www.boost.org/doc/libs/1_76_0/libs/beast/doc/html/index.html"> Boost.Beast </a></li>
-						<li>C++ Lib: <a href="https://www.cryptopp.com/"> Crypto++ </a></li>
-						<li>C++ Lib: <a href="https://rapidjson.org/"> RapidJSON </a></li>
+						<li>C++ Lib: <a target="_blank" rel="noopener noreferrer" href="https://www.boost.org/doc/libs/1_76_0/libs/beast/doc/html/index.html"> Boost.Beast </a></li>
+						<li>C++ Lib: <a target="_blank" rel="noopener noreferrer" href="https://www.cryptopp.com/"> Crypto++ </a></li>
+						<li>C++ Lib: <a target="_blank" rel="noopener noreferrer" href="https://rapidjson.org/"> RapidJSON </a></li>
 					</ul>
 					<br>
 				</div>
